# pm-document-intelligence

./: .dockerignore  .env.example  .gitignore  CODE_REVIEW_RDS_MIGRATION.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DOCUMENT_PROCESSING_FIX.md  Dockerfile  FIXES_APPLIED_SUMMARY.md  FRONTEND_BACKEND_CONNECTION_ISSUES.md  FUNCTIONALITY_TEST_REPORT.md  LICENSE  MIGRATION_SUMMARY.md  OFFICE_FORMAT_SUPPORT.md  QUICKSTART.md  README.md  SUPABASE_REMOVAL_COMPLETE.md  TECHNICAL_ARCHITECTURE.md  docker-compose.prod.yml  docker-compose.yml  fix_database_schema.py  fix_schema.sql  pyproject.toml  pytest.ini  quick_migration.py  run_migration.py  run_migration.sh  secrets.yml.example
.github/workflows/: deploy.yml  test.yml
app/: document.html  index.html
backend/: .env.example  AUTHENTICATION.md  DATABASE_SETUP.md  DOCUMENT_PROCESSING.md  FASTAPI_SETUP.md  INTEGRATION_SUMMARY.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_INTEGRATION.md  MCP_QUICK_REFERENCE.md  MULTI_AGENT_SYSTEM.md  TESTING.md  VECTOR_SEARCH.md  check_users.py  migrate_db.py  pytest.ini  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/agents/: __init__.py  action_agent.py  analysis_agent.py  base_agent.py  entity_agent.py  orchestrator.py  qa_agent.py  summary_agent.py
backend/app/cache/: redis.py
backend/app/db/: session.py
backend/app/mcp/: __init__.py  mcp_server.py
backend/app/middleware/: rbac.py  security.py
backend/app/migrations/: add_processing_columns.py
backend/app/models/: __init__.py  analysis.py  analytics.py  audit.py  document.py  organization.py  roles.py  user.py
backend/app/monitoring/: alerts.py  cost_tracking.py  dashboard_config.py  health_checks.py  log_aggregation.py  metrics.py  performance_profiling.py  tracing.py
backend/app/routes/: __init__.py  admin.py  agents.py  analytics.py  auth.py  documents.py  htmx.py  mcp.py  models.py  organizations.py  pages.py  realtime.py  search.py
backend/app/services/: __init__.py  analytics_service.py  audit_logger.py  aws.py  aws_service.py  document_processor.py  embedding_service.py  feedback_loop.py  invitation_service.py  office_extractor.py  pubnub_service.py  quota_manager.py  report_generator.py  vector_search.py
backend/app/tasks/: analytics_jobs.py
backend/app/utils/: audit_log.py  auth_helpers.py  exceptions.py  logger.py
backend/frontend/static/js/: app.js
backend/frontend/templates/: base.html  document.html  upload.html
backend/migrations/: add_processing_columns.sql
backend/migrations/versions/: add_multi_tenancy.py
backend/scripts/: init_database.sql  migrate_to_multi_tenancy.py  run_migrations.py  startup.sh
backend/scripts/scripts/: init_database.sql  init_vector_search.sql
backend/tests/: __init__.py  conftest.py  test_agents.py
demo_data/: README.md
docs/: API.md  ARCHITECTURE.md  AWS_SERVICE_ENABLEMENT_GUIDE.md  BEDROCK_TEXTRACT_SETUP_COMPLETE.md  CHANGELOG.md  COST_ANALYSIS.md  DEMO_SCRIPT.md  DEMO_TROUBLESHOOTING.md  DEPLOYMENT.md  DEVELOPMENT.md  FRONTEND_FEATURES_IMPLEMENTATION_PLAN.md  INTERVIEW_PREP.md  METRICS_DASHBOARD.md  ML_OPTIMIZATION_GUIDE.md  MULTI_TENANCY_GUIDE.md  PERFORMANCE.md  PRESENTATION_SLIDES.md  SECURITY.md  USER_GUIDE.md  USER_TESTING_GUIDE.md  VIDEO_SCRIPT.md  deployment.md  linkedin_post.md  portfolio.md
docs/ADR/: 001-choice-of-fastapi.md  002-claude-vs-gpt4-for-analysis.md  003-vector-search-implementation.md  004-multi-tenancy-approach.md  README.md  TEMPLATE.md
frontend/static/css/: style.css
frontend/static/js/: analytics.js  app.js  organization.js
frontend/templates/: analytics.html  document.html  index.html  organization.html  search.html  upload.html
infrastructure/: COST_OPTIMIZATION_2025-01-10.md
infrastructure/lambda/contact_form/: index.py  package.sh
infrastructure/monitoring/: .env.example  README.md  docker-compose.yml  export_dashboards.py  start-monitoring.sh
infrastructure/monitoring/alertmanager/: alertmanager.yml
infrastructure/monitoring/grafana/provisioning/dashboards/: dashboard.yml
infrastructure/monitoring/grafana/provisioning/datasources/: datasource.yml
infrastructure/monitoring/loki/: loki-config.yml
infrastructure/monitoring/prometheus/: alerts.yml  prometheus.yml
infrastructure/monitoring/promtail/: promtail-config.yml
infrastructure/nginx/: nginx.conf  proxy_params.conf
infrastructure/scripts/: init-db.sh
infrastructure/terraform/: app.tf  backend.tf  contact-form.tf  main.tf  outputs.tf  terraform.tfvars.example  tfplan  tfplan-absolute-minimum  tfplan-allowed-hosts  tfplan-bedrock-permissions  tfplan-healthcheck-fix  tfplan-permissions-fix  tfplan-security-fix  tfplan-supabase-config  tfplan-textract-permissions  variables.tf  website.tf
ml/models/: prompt_templates.py
ml/monitoring/: model_performance.py
ml/optimization/: intelligent_router.py
ml/training/: data_preparation.py  fine_tuning.py
scripts/: backup.sh  deploy.sh  init_database.sql  setup_demo.sh
tests/: README.md  conftest.py
tests/e2e/: test_user_journey.py
tests/integration/: test_api_endpoints.py  test_document_flow.py
tests/load/: test_performance.py
tests/unit/: test_agents.py  test_auth.py  test_document_processor.py  test_vector_search.py
website/: index.html  privacy.html  resources.html  services.html
