[tool.poetry]
name = "pm-document-intelligence"
version = "0.1.0"
description = "Production-ready FastAPI application for intelligent project management document processing using AWS Bedrock, Textract, Comprehend, OpenAI, Supabase, and PubNub"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
keywords = ["fastapi", "aws", "bedrock", "textract", "comprehend", "openai", "supabase", "pubnub", "document-intelligence", "nlp"]

[tool.poetry.dependencies]
python = "^3.11"
# FastAPI & Web Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"
jinja2 = "^3.1.3"
websockets = "^12.0"

# Configuration & Environment
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"

# AWS Services
boto3 = "^1.34.0"
botocore = "^1.34.0"
aioboto3 = "^12.3.0"

# OpenAI
openai = "^1.10.0"

# Supabase
supabase = "^2.3.0"
postgrest = "^0.13.0"

# PubNub
pubnub = "^7.4.0"

# Security & Authentication
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
cryptography = "^42.0.0"
pyjwt = "^2.8.0"

# Database
sqlalchemy = "^2.0.25"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"

# Caching & Message Queue
redis = "^5.0.1"
celery = "^5.3.6"
flower = "^2.0.1"

# Rate Limiting
slowapi = "^0.1.9"
limits = "^3.7.0"

# Monitoring & Observability
sentry-sdk = {extras = ["fastapi"], version = "^1.40.0"}
prometheus-client = "^0.19.0"
prometheus-fastapi-instrumentator = "^6.1.0"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"

# Logging
loguru = "^0.7.2"
python-json-logger = "^2.0.7"

# HTTP & API Clients
httpx = "^0.26.0"
aiohttp = "^3.9.1"
requests = "^2.31.0"

# Data Processing & Validation
pandas = "^2.1.4"
numpy = "^1.26.2"
openpyxl = "^3.1.2"
python-docx = "^1.1.0"
pypdf = "^4.0.0"
pdfplumber = "^0.10.4"

# ML & NLP
sentence-transformers = "^2.2.2"
tiktoken = "^0.5.2"
langchain = "^0.1.0"
langchain-community = "^0.0.13"

# Utilities
tenacity = "^8.2.3"
backoff = "^2.2.1"
python-slugify = "^8.0.1"
pyyaml = "^6.0.1"
ujson = "^5.9.0"
orjson = "^3.9.10"
arrow = "^1.3.0"
humanize = "^4.9.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"
pytest-timeout = "^2.2.0"
httpx = "^0.26.0"
faker = "^22.0.0"
factory-boy = "^3.3.0"
moto = {extras = ["all"], version = "^4.2.11"}

# Code Quality
black = "^23.12.1"
ruff = "^0.1.11"
isort = "^5.13.2"
mypy = "^1.8.0"
pylint = "^3.0.3"
bandit = "^1.7.6"
safety = "^3.0.0"

# Type Stubs
types-requests = "^2.31.0"
types-pyyaml = "^6.0.12"
types-redis = "^4.6.0"
boto3-stubs = {extras = ["bedrock-runtime", "textract", "comprehend", "s3"], version = "^1.34.0"}

# Documentation
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

# Development Tools
ipython = "^8.19.0"
ipdb = "^0.13.13"
pre-commit = "^3.6.0"
watchdog = "^3.0.0"

# Performance Testing
locust = "^2.20.0"

[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
# ML Training & Monitoring
mlflow = "^2.9.2"
wandb = "^0.16.2"
scikit-learn = "^1.4.0"
transformers = "^4.36.2"
torch = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ============================================================================
# Tool Configuration
# ============================================================================

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "flower.*",
    "pubnub.*",
    "moto.*",
    "locust.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["backend"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=backend",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "aws: Tests requiring AWS credentials",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
tests = ["B201", "B301", "B302", "B303", "B304", "B305", "B306", "B307", "B308", "B309", "B310", "B311", "B312", "B313", "B314", "B315", "B316", "B317", "B318", "B319", "B320", "B321", "B323", "B324", "B325", "B401", "B402", "B403", "B404", "B405", "B406", "B407", "B408", "B409", "B410", "B411", "B412", "B413", "B501", "B502", "B503", "B504", "B505", "B506", "B507", "B601", "B602", "B603", "B604", "B605", "B606", "B607", "B608", "B609", "B610", "B611", "B701", "B702", "B703"]
skips = ["B101", "B601"]
